Bug 1991643 - Don't use overflow-clip-margin to implement single-line <input> special-case. r=tnikkel,layout-reviewers
Instead, just don't propagate inline padding to single-line <input>
scrollers.

This causes one web-observable behavior change which is that the
scroll{Width,Left} of the <input> changes. However this seems the
right thing to do API-wise, the client area doesn't include the
inline padding.

If this causes compat issues, it should be easy to special-case in
Element::GetClientAreaRect (but I'm hoping that's not the case, given
only one test is affected, and is a test I wrote).

Differential Revision: https://phabricator.services.mozilla.com/D266788

--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -181,7 +181,6 @@ button,
 input::placeholder,
 input::-moz-text-control-editing-root,
 input::-moz-text-control-preview {
-  overflow-clip-box: padding-box content-box;
   scrollbar-width: none;
   resize: none;
   word-wrap: normal;
